Fixed FullList bug